# service/api/ban-user.go
@@ -21,9 +21,14 @@ func (rt *_router) banUser(w http.ResponseWriter, r *http.Request, ps httprouter
 	w.Header().Set("Content-Type", "application/json")
 	var usernameTargetUser string
 	err = json.NewDecoder(r.Body).Decode(&usernameTargetUser)
-	_, err = rt.db.ExistsUser(usernameTargetUser)
+	exists, err := rt.db.ExistsUser(usernameTargetUser)
 	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+	if exists != true {
+		ctx.Logger.WithError(err).Error("delete-photo: the photo does not exist")
+		w.WriteHeader(http.StatusNotFound)
 		return
 	}
 	allow := validateRequestingUser(tokenRequestUser, bearerToken)
@@ -31,9 +36,8 @@ func (rt *_router) banUser(w http.ResponseWriter, r *http.Request, ps httprouter
 		w.WriteHeader(allow)
 		return
 	}
-
 	if usernameRequestUser == usernameTargetUser {
-		w.WriteHeader(http.StatusBadRequest)
+		w.WriteHeader(http.StatusForbidden)
 		return
 	}
 	
@@ -41,11 +45,39 @@ func (rt *_router) banUser(w http.ResponseWriter, r *http.Request, ps httprouter
 	err = rt.db.BanUser(usernameRequestUser, usernameTargetUser)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("ban user/db.BanUser: error executing insert query")
-
-		// C'è stato un errore interno,restituisco(error:500)
 		w.WriteHeader(http.StatusInternalServerError)
 		return
 	}
-	// Respond with 204 http status
-	w.WriteHeader(http.StatusNoContent)
+
+	// get followers and following of the requested user
+	followers, err := rt.db.GetFollowers(usernameTargetUser)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("getUserProfile - GetFollowers: error executing query")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	following, err := rt.db.GetFollowing(usernameTargetUser)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("getUserProfilen - GetFollowing: error executing query")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	// get also list of photos of the user from db
+	photos, err := rt.db.GetPhotos(usernameTargetUser)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("getUserProfile - GetPhotosList: error executing query")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	// Respond with 201 http status
+	w.WriteHeader(http.StatusCreated)
+	_ = json.NewEncoder(w).Encode(UserProfile{
+		Username:  usernameTargetUser,
+		Followers: followers,
+		Following: following,
+		Photos:    photos,
+	})
 }
